# fpde

./: .gitignore  CMakeLists.txt  CMakeLists.txt.orig  Doxyfile.in  README  README.md  TODO.md  ifort.cfg
config/: .#ifort_f77.cfg  ifort.cfg  ifort_f77.cfg  ifort_precision.cfg
misc/: CMakeLists.txt  CMakeLists.txt.in  fpde.cmake  fpde.cmake.in
scripts/: fpde.py  generate_png.py  generate_png.sh  make_movie.sh  plot_scalar.py
src/: CMakeLists.txt  derivative.f95  files.txt  rhs.f95
src/marcher/: control.f90  control_factory.f90  marcher.f90  stepper.f90  stepper_factory.f90  system.f90
src/marcher/marcher/dummy/: dummy.f90
src/marcher/ode_problems/: aren.f90  bruss.f90  eulr.f90  oivp.f90  oivp_factory.f90  stiff1.f90  stiff2.f90  stiff3.f90
src/marcher/stepper_types/: rk2imp.f90  rk4cs.f90  rkdp54.f90  rkf45.f90  rkf78.f90  rkm43.f90  rkv65.f90  rkv65omp.f90  rkz43.f90
src/mesh/: factory.f90  mesh.f90  mesh_factory.f90
src/mesh/mesh/: mesh_example.f90  symmetric_finite_difference_3pt.f90
src/mesh/meshes/afd5pt/: mesh_afd5pt.f90
src/mesh/meshes/example/: mesh_example.f90
src/mesh/meshes/sfd3pt/: sfd3pt.f90
src/mesh/meshes/spectral/: spectral.f90  spectral.f90.bkp
src/mod/: mod.f90
src/modules/: m1.f90  module.f90  module_bundle.f90
src/modules/modules/print_data/: module_print_data.f90  module_print_scalar_data.f90
src/modules/modules/stepper_rank/: module_stepper_rank.f90
src/modules/modules/stop/: module_stop.f90
src/modules/modules/test/: test.f90  test1.f90  test2.f90
src/solver/: solver.f90  solver_data.f90  solver_factory.f90
src/solver/solver/mmpde6/: solver_mmpde6.f90
src/solver/solver/simple/: simple.f90  simple_data.f90
src/solver/solver/standard/: solver_standard.f90
src/stepper/: stepper.f90
src/triggers/: trigger.f90  trigger_bundle.f90
src/triggers/ever_n_iter/: trigger_every_n_iter.f90
src/triggers/timed/: trigger_timed.f90
src/triggers/trigger/: always.f90  trigger_dt_norm.f90  trigger_monotonic.f90  trigger_x_control.f90
src/triggers/trigger/once/: trigger_once.f90
src/utils/: array_operations.f90  derivs.f90  derivs.f90.bkp  init.f90  inverse_greens.f90  list.f90  pretty_print.f90  print.f90  random.f90  system.f90  utils.f90.bkp
test/: abstract.f90.bug  array_test.f90  constructor_pointer_to_function.f90  constructors.f90  evaluation_test.f90  factories.f90  generic_write.f90.ifort12.1_not_yet_implemented  heterogenic_list.f90  inheritance.f90  mesh_afd5pt.f90  mesh_example.f90  mesh_factory.f90  mesh_sfd3pt.f90  mesh_symmetric_finite_difference_3pt.f90  module_bundle.f90  module_test.f90  ode_part.f90  ode_stepper_order.f90  ode_stiff_accuracy_test.f90  plplot.f90.bkp  reallocation.f90  self_factory_for_initialization_data.f90  solver_mmpde6.f90  solver_mmpde6_harmonic.f90  solver_simple.f90  solver_simple.f90.bkp  spectral_example.f90  switch_test.f90  test.f90  trigger.f90  trigger_bundle.f90  unlimited_polymorphic.f90  unlimited_polymorphic.f90.bkp  utils_inverse_green.f90
